Bug 1544710 - ensure that selected row is always visible within TreeView after update. Clean up scroll into view operations across all uses of TreeView. r=mtigley
Differential Revision: https://phabricator.services.mozilla.com/D29342

UltraBlame original commit: 66c1e6f5276fc3bbf3fa1f0f68f129844aa9dcdc

--- a/devtools/client/accessibility/accessibility.css
+++ b/devtools/client/accessibility/accessibility.css
@@ -199,6 +199,34 @@ indent
 -
 accessibility
 -
+tree
+-
+height
+:
+calc
+(
+100vh
+-
+var
+(
+-
+-
+accessibility
+-
+toolbar
+-
+height
+)
+*
+2
+-
+1px
+)
+;
+-
+-
+accessibility
+-
 arrow
 -
 horizontal
@@ -795,24 +823,6 @@ color
 }
 .
 mainFrame
-.
-main
--
-panel
-{
-flex
-:
-1
-1
-auto
-;
-overflow
-:
-auto
-;
-}
-.
-mainFrame
 {
 height
 :
@@ -830,6 +840,44 @@ theme
 toolbar
 -
 color
+)
+;
+}
+.
+main
+-
+panel
+{
+/
+*
+To
+compenstate
+for
+1px
+splitter
+between
+the
+tree
+and
+sidebar
+.
+*
+/
+width
+:
+var
+(
+-
+-
+accessibility
+-
+full
+-
+length
+-
+minus
+-
+splitter
 )
 ;
 }
@@ -1704,6 +1752,43 @@ Customization
 *
 /
 .
+treeTable
+thead
+.
+treeTable
+tbody
+{
+display
+:
+block
+;
+}
+.
+treeTable
+tr
+{
+width
+:
+100
+%
+;
+display
+:
+table
+;
+}
+.
+treeTable
+tbody
+{
+overflow
+-
+y
+:
+auto
+;
+}
+.
 split
 -
 box
@@ -1714,119 +1799,96 @@ not
 horz
 )
 .
-main
--
-panel
+treeTable
+tbody
 {
+height
+:
+var
+(
+-
+-
+accessibility
+-
+tree
+-
+height
+)
+;
+}
+.
+split
+-
+box
+.
+horz
+.
+treeTable
+tbody
+{
+/
+*
+Accessibility
+tree
+height
+depends
+on
+the
+height
+of
+the
+controlled
+panel
+(
+sidebar
+)
+when
+in
+horz
+mode
+and
+also
+has
+an
+additional
+separator
+.
+*
+/
 height
 :
 calc
 (
-100vh
--
 var
 (
 -
 -
 accessibility
 -
-toolbar
+tree
 -
 height
 )
-)
-;
-}
-.
-treeTable
->
-thead
-{
-position
-:
-sticky
-;
-top
-:
-0
-;
-/
-*
-Bug
-1466806
 -
-fix
-expander
-arrow
-for
-expanding
-treeview
-rows
-rendering
-over
-the
-thead
-*
-/
-z
--
-index
-:
-1
-;
-}
-.
-split
--
-box
-:
-not
-(
-.
-horz
-)
-.
-treeTable
-{
-/
-*
-To
-compenstate
-for
-1px
-splitter
-between
-the
-tree
-and
-sidebar
-.
-*
-/
-width
-:
 var
 (
 -
 -
-accessibility
--
-full
--
-length
--
-minus
--
-splitter
-)
-;
-}
-.
 split
 -
 box
-.
-horz
+-
+controlled
+-
+panel
+-
+size
+)
+-
+1px
+)
+;
+}
 .
 treeTable
 {
@@ -2326,6 +2388,11 @@ treeTable
 .
 treeHeaderCell
 {
+width
+:
+50
+%
+;
 border
 -
 bottom
